# FedGAN

./: .gitignore  README.md  better_dcgan_training.py  create_non_iid_splits.py  custom_layers.py  dcgan_training.py  delete_corrupt_images.py  evaluation_metrics.py  fid_calculator.py  model_dcgan.py  preprocessing.py  pretraining.py  privacy_evaluation.py  pyproject.toml  statistical_validation.py  tfrecord_inspect_no_labels.py  tfrecord_inspect_with_labels.py
fid_results/: fid_comparison.txt
privacy_evaluation_results/: privacy_evaluation_results.json  privacy_summary.txt
