[project]
name = "FedGAN"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pynvim>=0.5.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorflow==2.17",
    "tensorflow-metal>=1.1.0",
    "tqdm>=4.67.1",
]
